fix #3071 Fix split terminal not showing issue

--- a/src/client/components/terminal/terminal.styl
+++ b/src/client/components/terminal/terminal.styl
@@ -1,6 +1,5 @@
 @require '../../css/includes/theme-default'
 .terms-box
-.term-wrap
   background main
   position relative
 .loading-wrapper
@@ -43,6 +42,7 @@
 .terms-box
   position relative
 .term-wrap
+  background main
   position absolute
 
 .vertical
